# dddb

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  dddbcli.py  docker-compose.yml  flake.nix  pyproject.toml  shell.nix
.direnv/: nix-profile-.4112.5a237aecb572  nix-profile-.4112.5a237aecb572.rc
dddb/: Cargo.toml
dddb/src/: lib.rs
dddb/text/craigslist/: __init__.py
dddb/video/: __init__.py
dddb/video/fakevideo/: __init__.py
dddb/video/peertube/: __init__.py
dddb/video/youtube/: __init__.py
fakehosts/video/: Dockerfile  server.py
python3-dddb/DEBIAN/: control
python3-dddb/usr/lib/python3/dist-packages/dddb/: __init__.py
python3-dddb/usr/lib/python3/dist-packages/dddb/remote/: bee.txt  client_secrets.json  youtube.py
