[tool.poetry]
name = "dddb"
version = "0.7.1"
description = "DeadDrop protocol library"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ffmpeg-python = "^0.2.0"
pillow = "^10.2.0"
numpy = "^1.26.4"
opencv-python = "4.7.0.72"
yt-dlp = "^2023.12.30"
requests = "^2.31.0"
path = "^16.10.0"
selenium = "^4.18.1"
peertube = {git = "https://framagit.org/framasoft/peertube/clients/python.git"}
pythonvideoconverter = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
